# BEE2.4

./: .gitignore  .gitmodules  BEE2.fgd  BEE2.pot  BEE2.py  BEE2.pyw  BEE2_config.py  BEE_png.py  CHANGELOG.md  CompilerPane.py  FAQ.md  FakeZip.py  INSTALL_GUIDE.txt  Item.py  PaletteItem.py  README.md  StyleVarPane.py  SubPane.py  UI.py  architecture.md  basemodui.txt  bee2.fgd  compile_BEE2.py  compile_vbsp.bat  compile_vbsp.py  compile_vbsp_ts.bat  compile_vbsp_vrad.bat  compile_vbsp_vrad.py  compile_vbsp_vrad_ts.bat  conditions.py  config.py  contextWin.py  dev-requirements.txt  gameMan.py  help_urls.dmx  inlang.config.js  itemPropWin.py  item_list.py  license_tkinter-png.txt  loadScreen.py  (+29 more)
.github/: contributing.md
BEE2/: BEE2.py
config/: config.cfg  games.cfg  item_configs.cfg
dev/: BEE Git.pdn  Class Layout.vsdx  ITaskbarList.h  ITaskbarList.idl  ITaskbarList_i.c  ITaskbarList_p.c  Style Tree.vsdx  TaskbarLib.idl  TaskbarLib.tlb  bee2.ai  bee2_sqr.ai  bee2_sqr_sml.ai  conditions.md  cursors.py  dependancies.txt  dlldata.c
docs/: contributing.md
i18n/: BEE2.pot  es.po  fr.po  ja.po  pl.po  ru.po  zh.po  zh_cn.po
items/: bee_clean_pnuematic-diversity-vent.vpk
lib-32/: license-libspatialindex.txt
palettes/: BEEMod.Bee2Palette  ap_tag.bee2_palette  beemod.bee2_palette  blank.bee2_palette  collapsed.bee2_palette  original.bee2_palette
src/: BEE2.py  BEE2.pyw  BEE2.spec  BEE2_config.py  BEE2_launch.py  BEE2_launch.pyw  BSP.py  Backup.py  CheckDetails.py  CompilerPane.py  FakeZip.py  SubPane.py  (+99 more)
trampoline/: Cargo.toml
trampoline/src/: build.rs  lib.rs
(+435 files in other folders)
